# CS_474

./: .gitignore  pyproject.toml
labs/: lab10_diffusion.ipynb  lab11_rl.ipynb  lab1_pytorch_intro.ipynb  lab2_modules_training.ipynb  lab3_cross_entropy_convnets.ipynb  lab4_unets.ipynb  lab5_generalization.ipynb  lab6_regularization.ipynb  lab8_self_attention.ipynb  lab9_transfer_learning.ipynb
