[project]
name = "cs-474"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.2",
    "matplotlib>=3.10.0",
    "mnist1d>=0.0.2.post1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "spacy>=3.8.4",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]
